# slides-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
assets/templates/init/: decks.yaml
documentation/: comparison.md  installation.md
documentation/architecture/: 01-einfuehrung-und-ziele.md  01-introduction-and-goals.md  03-context-and-scope.md  04-solution-strategy.md  06-runtime-view.md  07-deployment-view.md  08-cross-cutting-concepts.md  09-design-decisions.md  10-quality-requirements.md  12-glossary.md  README.md
documentation/architecture/adr/: ADR-001-rust-as-implementation-language.md  ADR-002-minijinja-as-template-engine.md  ADR-003-static-html-output.md  ADR-004-headless-chrome-for-thumbnails.md
documentation/architecture/diagrams/: build-process.puml  ci-cd-pipeline.puml  deployment.puml
documentation/architecture/quality-scenarios/: QS-001_flexibility_extensibility.md  QS-002_flexibility_customizability.md  QS-003_usability_learnability.md  QS-004_usability_simplicity.md  QS-005_operability_installability.md  QS-006_operability_portability.md  QS-007_efficiency_performance.md  QS-008_suitable_interoperability.md  QS-009_maintainability_understandability.md  QS-010_maintainability_testability.md
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: cli.rs  error.rs  lib.rs  main.rs  project.rs  render.rs  translations.rs  util.rs
src/infrastructure/: chrome.rs  mod.rs  pdf.rs
src/minijinja/: filters.rs  functions.rs  mod.rs
src/model/: deck.rs  mod.rs  project.rs  slide.rs
src/services/: init.rs  mod.rs  render.rs  translations.rs
src/templates/init/: decks.yaml
tests/: README.md  functional.rs  integration.rs
tests/fixtures/: example.pptx
tests/fixtures/default/: decks.yaml
tests/fixtures/minimal/: decks.yaml
tests/functional/commands/: init_test.rs  mod.rs
tests/functional/workflows/: build_test.rs  (+2 more)
(+36 files in other folders)
