[package]
name = "slides-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "slides_rs"
path = "src/lib.rs"

[[bin]]
name = "slides"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
itertools = "0.14"
rust-i18n = "3"
zip = "0.6"
minijinja = { version = "2", features = ["loader", "multi_template"] }
include_dir = "0.7"
pulldown-cmark = "0.10"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# PDF Export
headless_chrome = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
dirs = "5.0"
which = "6.0"
rand = "0.8"
lopdf = "0.38"
md-5 = "0.10"
notify-debouncer-mini = "0.4"

# Image processing for thumbnails
image = "0.25"
printpdf = "0.7"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
